--- a/src/Components/Banner/style.module.scss
+++ b/src/Components/Banner/style.module.scss
@@ -44,6 +44,7 @@
                 margin-left: 20px;
                 font-weight: bold;
                 justify-content: center;
+                width: 100%;
                 .without{
                     color: white;
                     padding: 10px;
@@ -51,12 +52,14 @@
                     color: var(--background);
                     font-size: 1.6em ;
                     border-radius: 5px;
+                    
                 }
                 .valueWithout{
                     padding: 13px;
                     background-color: var(--light-gray);
                     color: white;
                     font-size: 1.5em ;
+                    width: 100%;
                     
                 }
             }
