--- a/src/Components/Navbar/style.module.scss
+++ b/src/Components/Navbar/style.module.scss
@@ -3,6 +3,12 @@
   margin: auto;
   gap: 10px;
   padding: 0 20px;
+  a {
+    text-decoration: none;
+    &:visited {
+      color: var(--lime-green);
+    }
+  }
   .menu {
     display: none;
   }
